minor container overflow fix

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@ body {
     padding: 0;
     background: #f3f3f4;
     color: #333333;
-    overflow-x: hidden;
 }
 
 /*----------- Content styles -----------*/
@@ -61,6 +60,7 @@ body {
 }
 
 #question-container {
+    width: 96%;
     padding: 2%;
     vertical-align: middle;
     height: 100vh;
